--- a/scss/style.css
+++ b/scss/style.css
@@ -71,7 +71,11 @@ figure {
   overflow: hidden;
   z-index: 1;
 }
-figure video {
+figure div {
+  width: 100%;
+  height: 100%;
+}
+figure div video {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -132,7 +136,6 @@ footer {
   header #snb .sub-menu {
     position: absolute;
     right: 5vw;
-    background-color: rgb(220, 244, 205);
     padding: 10px 25px;
     border: 1px solid rgba(0, 0, 0, 0.669);
     border-radius: 10px;
@@ -155,7 +158,4 @@ footer {
   figure .text p {
     font-size: 15vw;
   }
-}
-.winter {
-  z-index: 10;
 }/*# sourceMappingURL=style.css.map */
