--- a/scss/style.scss
+++ b/scss/style.scss
@@ -84,10 +84,15 @@ figure {
   overflow: hidden;
   z-index: 1;
 
-  video{
+  div{
+    width: 100%;
+    height: 100%;
+    
+    video{
     width: 100%;
     height: 100%;
     object-fit: cover;
+   }
   }
 
   .text{
@@ -157,7 +162,6 @@ footer {
       .sub-menu{
         position: absolute;
         right: 5vw;
-        background-color: rgb(220, 244, 205);
         padding: 10px 25px;
         border: 1px solid $font-color;
         border-radius: 10px;
@@ -193,8 +197,4 @@ footer {
       }
     }
   }
-}
-
-.winter {
-  z-index: 10;
 }
